2006-11-03    <drblast@users.sourceforge.net>

	* Interpreter.cpp (compileProgram): Changed the way the interpreter keeps track of line numbers.  Now there's a CURRLINE bytecode which is executed every time the line changes. Also added step-by-step debugging.

2006-11-02    <drblast@users.sourceforge.net>

	* Interpreter.cpp (execByteCode): Printing of floating point instead of integers fixed.

2006-11-01    <drblast@users.sourceforge.net>

	* Interpreter.cpp (execByteCode): Added OP_LINE, which draws lines.

2006-10-31    <drblast@users.sourceforge.net>

	* Interpreter.cpp (execByteCode): Added pause command

	* BasicEdit.cpp (cursorMove): Added slot to calculate line number when the cursor moves, and display it on the status bar.

2006-10-25    <drblast@users.sourceforge.net>

	* Main.cpp (main): Added actions to edit menu.  Removed close button on output windows.

2006-10-20    <drblast@users.sourceforge.net>

	* Interpreter.cpp: Added internationalization support.

	* BasicEdit.cpp: Added internationalization support.

	* Main.cpp (main): Added internationalization support.

2006-10-18    <drblast@users.sourceforge.net>

	* BasicEdit.cpp (BasicEdit): Editor now won't accept rich text, fixing weird font bugs.

	* RunController.cpp (saveByteCode): Added saveByteCode function which saves the compiled byte code to a .kbc file.

	* Main.cpp (main): Added save byte code function and Advanced menu.

	* LEX\basicParse.y: Changed to more dynamic allocation of byteCode to reduce memory footprint for small programs and to prevent memory errors from occurring on 64-bit architectures.

	* Interpreter.cpp (execByteCode): Added mathematical functions FLOOR, CEIL, RAND, SIN, COS, TAN, and ABS
	Separated initialize from compileProgram to support saving byte code as a file.
	
2006-10-16    <drblast@users.sourceforge.net>

	* Interpreter.cpp (execByteCode): Added and, not, xor, and or operations

	* LEX\basicParse.y: Added AND, NOT, XOR, OR
